# E2AM-MemRAG

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-kaggle.txt
configs/: bootstrap.json  bootstrap.yaml
docs/: FAILURE_RECOVERY.md  RESEARCH_PLAN_V3.md  SCIENTIFIC_CONTRACT.md
notebooks/: 00_setup_and_freeze_data.ipynb  01_build_indexes.ipynb  02_build_and_freeze_hybridbench.ipynb  03_pilot_routes_lane_00.ipynb  03_pilot_routes_lane_01.ipynb  03_pilot_routes_lane_02.ipynb  03_pilot_routes_lane_03.ipynb  04_aggregate_and_prune_pilot.ipynb  05_collect_training_traces_lane_00.ipynb  05_collect_training_traces_lane_01.ipynb  05_collect_training_traces_lane_02.ipynb  05_collect_training_traces_lane_03.ipynb  06_train_and_calibrate_router.ipynb  07_evaluate_frozen_clean_lane_00.ipynb  07_evaluate_frozen_clean_lane_01.ipynb  07_evaluate_frozen_clean_lane_02.ipynb  07_evaluate_frozen_clean_lane_03.ipynb  08_run_robustness_lane_00.ipynb  08_run_robustness_lane_01.ipynb  08_run_robustness_lane_02.ipynb  08_run_robustness_lane_03.ipynb  09_aggregate_audit_and_release.ipynb  10_consolidate_verified_hf_release.ipynb  README.md
output/: PACKAGE_REPORT.json
paper/: PAPER_BLUEPRINT.md  README.md  RESULTS_AUDIT.md  RESULTS_MANIFEST.json  REVIEWER_REPORT.md
scripts/: build_consolidation_notebook.py  build_experiment_notebooks.py  build_manuscript_assets.py  collect_paper_results.py  e2am_consolidation_runtime.py  package_manuscript.py  render_manuscript_figures.py  render_pdf_contact_sheets.py  update_paper_manifest.py  (+2 more)
(+134 files in other folders)
