[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e2am-memrag"
version = "0.1.0"
description = "Failure-resilient experiment infrastructure for E2AM-MemRAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Shanmukesh Bonala"}]
dependencies = [
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
kaggle = [
  "huggingface-hub==0.36.2",
  "hf-xet==1.5.1",
  "nvidia-ml-py==13.610.43",
  "numpy>=1.26,<2.3",
  "scikit-learn==1.7.2",
  "joblib==1.5.3",
  "transformers==4.57.6",
  "accelerate==1.12.0",
  "tokenizers==0.22.1",
  "safetensors==0.7.0",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
e2am-validate = "e2am_memrag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
